@@ -1,5 +1,10 @@
 Changes in 1.8 (??.??.2011)
 
+ - quaternion conversions to and from matrix4 no longer invert rotations. 
+   To test if your code was affected by this you can set IRR_TEST_BROKEN_QUATERNION_USE in quaternion.h and try to compile your application.
+   Then on all compile-errors when you pass the matrix to the quaternion you can replace the matrix transposed matrix.
+   For all errors you get on getMatrix() you can use quaternion::getMatrix_transposed instead.
+
  - CGUIEnvironment::loadGui - loading a gui into a target-element no longer messes up when the gui-file contained guienvironment serialization.
 
  - Colladawriter now exports materials per node when those are used in Irrlicht
